--- a/VisioConectorTest/VisioConector.csproj
+++ b/VisioConectorTest/VisioConector.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VisioConectorTest</RootNamespace>
     <AssemblyName>VisioConectorTest</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,9 +32,45 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cake.Engine">
+      <HintPath>..\SRL\Cake.Engine.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Visio, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <HintPath>..\visioConector\packages\Visio2013.PrimaryInteropAssembly.1.0.0.4\lib\net20\Microsoft.Office.Interop.Visio.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="SRL.Mappings.Core">
+      <HintPath>..\SRL\SRL.Mappings.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.BehaviourDescription">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.BehaviourDescription.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.Common">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.Function">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.Function.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.PhysicalLevel">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.PhysicalLevel.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.Specification">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.Specification.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL.Mappings.Enginering.Structure">
+      <HintPath>..\SRL\SRL.Mappings.Enginering.Structure.dll</HintPath>
+    </Reference>
+    <Reference Include="SRL2Cake">
+      <HintPath>..\SRL\SRL2Cake.dll</HintPath>
+    </Reference>
+    <Reference Include="SRLUtilities">
+      <HintPath>..\SRL\SRLUtilities.dll</HintPath>
+    </Reference>
+    <Reference Include="SRLV2">
+      <HintPath>..\SRL\SRLV2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
