--- a/VisioConectorTest/VisioConector.csproj
+++ b/VisioConectorTest/VisioConector.csproj
@@ -32,44 +32,62 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Cake.ConnectionFactory, Version=20.1.7641.27222, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\SRL\Cake.ConnectionFactory.dll</HintPath>
+    </Reference>
     <Reference Include="Cake.Engine">
       <HintPath>..\SRL\Cake.Engine.dll</HintPath>
+    </Reference>
+    <Reference Include="Core">
+      <HintPath>..\..\..\Downloads\Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Office.Interop.Visio, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <HintPath>..\visioConector\packages\Visio2013.PrimaryInteropAssembly.1.0.0.4\lib\net20\Microsoft.Office.Interop.Visio.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="SRL.Mappings.Core">
+    <Reference Include="SRL.Mappings.Core, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Core.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering">
+    <Reference Include="SRL.Mappings.Enginering, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.BehaviourDescription">
+    <Reference Include="SRL.Mappings.Enginering.BehaviourDescription, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.BehaviourDescription.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.Common">
+    <Reference Include="SRL.Mappings.Enginering.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.Common.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.Function">
+    <Reference Include="SRL.Mappings.Enginering.Function, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.Function.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.PhysicalLevel">
+    <Reference Include="SRL.Mappings.Enginering.PhysicalLevel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.PhysicalLevel.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.Specification">
+    <Reference Include="SRL.Mappings.Enginering.Specification, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.Specification.dll</HintPath>
     </Reference>
-    <Reference Include="SRL.Mappings.Enginering.Structure">
+    <Reference Include="SRL.Mappings.Enginering.Structure, Version=20.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL.Mappings.Enginering.Structure.dll</HintPath>
     </Reference>
-    <Reference Include="SRL2Cake">
+    <Reference Include="SRL2Cake, Version=20.1.7641.27259, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRL2Cake.dll</HintPath>
     </Reference>
-    <Reference Include="SRLUtilities">
+    <Reference Include="SRLUtilities, Version=20.1.7641.27259, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRLUtilities.dll</HintPath>
     </Reference>
-    <Reference Include="SRLV2">
+    <Reference Include="SRLV2, Version=20.1.7641.27212, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SRL\SRLV2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
